--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,11 +3,11 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Triggers when you push changes to the main branch
+      - main  # Triggers when changes are pushed to the main branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # This defines the environment for the build job
 
     steps:
     - name: Checkout repository
@@ -16,8 +16,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}  # Uses the secret for the Docker username
+        password: ${{ secrets.DOCKER_PASSWORD }}  # Uses the secret for the Docker password
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
