--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,5 @@
 name: Build and Push Docker Image to Docker Hub
 
-# Trigger this action when there is a push to the main branch
 on:
   push:
     branches:
@@ -26,14 +25,20 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-    # Step 4: Build and push the Docker image
+    # Step 4: Build and push the Docker image to Docker Hub (multi-platform build)
     - name: Build and push Docker image to Docker Hub
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ./Dockerfile  # Adjust this if your Dockerfile is in a different location
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64  # Ensure multi-platform builds
         push: true
         tags: jakehazex21/my-nginx-app:latest  # Replace with your Docker Hub image tag
+
+    # Step 5: Log out from Docker Hub
+    - name: Log out from Docker Hub
+      run: docker logout
+
 
     # Step 5: Log out from Docker Hub
     - name: Log out from Docker Hub
