--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,8 +50,8 @@ jobs:
       env:
         KUBECONFIG: ${{ secrets.KUBECONFIG }}
       run: |
-        echo "$KUBECONFIG" > kubeconfig.yaml
-        export KUBECONFIG=$(pwd)/kubeconfig.yaml
+        echo "${{ secrets.KUBECONFIG }}" > kubeconfig
+        export KUBECONFIG=$(pwd)/kubeconfig
 
     # Step 7: Update the image in your Kubernetes deployment and apply it
     - name: Update and deploy to Kubernetes
