--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,63 +1,49 @@
-name: Build and Push Docker Image to Docker Hub
+name: Build, Push, and Deploy Docker Image to Kubernetes
 
 on:
   push:
     branches:
-      - main  # Adjust this if you're using a different branch
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the code from your repository
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Step 2: Set up Docker Buildx for multi-platform builds
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # Step 3: Log in to Docker Hub using the stored secrets
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-    # Step 4: Build and push the Docker image to Docker Hub (multi-platform build)
-    - name: Build and push Docker image to Docker Hub
+    - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64  # Ensure multi-platform builds
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jakehazex21/my-nginx-app:latest  # Replace with your Docker Hub image tag
+        tags: jakehazex21/my-nginx-app:latest
 
-    # Step 5: Log out from Docker Hub
-    - name: Log out from Docker Hub
-      run: docker logout
-
-    # Step 6: Set up kubectl and configure Kubernetes access using KUBECONFIG secret
-    - name: Set up kubectl
-      run: |
-        curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x ./kubectl
-        sudo mv ./kubectl /usr/local/bin/kubectl
-
+    # Create KUBECONFIG file from secret and set it
     - name: Set up KUBECONFIG from secret
       run: |
         echo "${{ secrets.KUBECONFIG }}" > kubeconfig
         export KUBECONFIG=$(pwd)/kubeconfig
 
-    # Print the available contexts to verify the correct one
-    - name: Check available Kubernetes contexts
-      run: kubectl config get-contexts
+    # Debug: Print the KUBECONFIG environment variable to confirm it’s set
+    - name: Print KUBECONFIG environment variable
+      run: echo $KUBECONFIG
 
-    # Debugging Steps
-    - name: Print KUBECONFIG
-      run: cat kubeconfig
+    # Debug: Check if kubectl context is being set
+    - name: Check Kubernetes context
+      run: kubectl config current-context
 
     # Test Kubernetes connection
     - name: Test Kubernetes connection
