--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,17 +37,24 @@ jobs:
         echo "${{ secrets.KUBECONFIG }}" > kubeconfig
         export KUBECONFIG=$(pwd)/kubeconfig
 
-    # Explicitly set the current Kubernetes context
-    - name: Set the Kubernetes context
-      run: kubectl config use-context do-nyc1-k8s-cloudfi
+    # Debug: Print the contents of KUBECONFIG to verify it is correct
+    - name: Print KUBECONFIG contents
+      run: cat kubeconfig
 
-    # Debug: Print the KUBECONFIG environment variable to confirm it’s set
-    - name: Print KUBECONFIG environment variable
-      run: echo $KUBECONFIG
+    # List available contexts to check for issues
+    - name: List available Kubernetes contexts
+      run: kubectl config get-contexts
 
-    # Debug: Check if kubectl context is set
-    - name: Check Kubernetes context
-      run: kubectl config current-context
+    # Dynamically set the context if found
+    - name: Dynamically set Kubernetes context
+      run: |
+        CONTEXT_NAME=$(kubectl config get-contexts -o name | grep "do-nyc1-k8s-cloudfi" || echo "not_found")
+        if [ "$CONTEXT_NAME" = "not_found" ]; then
+          echo "Context not found. Exiting."
+          exit 1
+        else
+          kubectl config use-context $CONTEXT_NAME
+        fi
 
     # Test Kubernetes connection
     - name: Test Kubernetes connection
