--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,67 +1,40 @@
-name: Build, Push, and Deploy Docker Image to Kubernetes
+name: Build and Push Docker Image to Docker Hub
 
 on:
   push:
     branches:
-      - main
+      - main  # Adjust this if you're using a different branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Check out the code from your repository
     - name: Checkout code
       uses: actions/checkout@v2
 
+    # Step 2: Set up Docker Buildx for multi-platform builds
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # Step 3: Log in to Docker Hub using the stored secrets
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
+    # Step 4: Build and push the Docker image to Docker Hub (multi-platform build)
+    - name: Build and push Docker image to Docker Hub
       uses: docker/build-push-action@v4
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64  # Ensure multi-platform builds
         push: true
-        tags: jakehazex21/my-nginx-app:latest
+        tags: jakehazex21/my-nginx-app:latest  # Replace with your Docker Hub image tag
 
-    # Decode the base64 KUBECONFIG and set it up for kubectl
-    - name: Decode and create KUBECONFIG file
-      run: |
-        echo "${{ secrets.KUBECONFIG }}" | base64 --decode > kubeconfig
-        export KUBECONFIG=$(pwd)/kubeconfig
-
-    # Debug: Print the KUBECONFIG contents to verify it's correct
-    - name: Print KUBECONFIG contents
-      run: cat kubeconfig
-
-    # List Kubernetes contexts to confirm the correct context is available
-    - name: List Kubernetes contexts
-      run: kubectl config get-contexts
-
-    # Dynamically set the correct context if found
-    - name: Dynamically set Kubernetes context
-      run: |
-        CONTEXT_NAME=$(kubectl config get-contexts -o name | grep "do-nyc1-k8s-cloudfi" || echo "not_found")
-        if [ "$CONTEXT_NAME" = "not_found" ]; then
-          echo "Context not found. Exiting."
-          exit 1
-        else
-          kubectl config use-context $CONTEXT_NAME
-        fi
-
-    # Test Kubernetes connection
-    - name: Test Kubernetes connection
-      run: kubectl get nodes
-
-    # Update the image in your Kubernetes deployment
-    - name: Update and deploy to Kubernetes
-      run: |
-        kubectl set image deployment/my-nginx-app my-nginx-app:jakehazex21/my-nginx-app:latest
-        kubectl rollout status deployment/my-nginx-app
+    # Step 5: Log out from Docker Hub
+    - name: Log out from Docker Hub
+      run: docker logout
