--- a/clusters/myclusters/nginx-deployment.yaml
+++ b/clusters/myclusters/nginx-deployment.yaml
@@ -2,9 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-nginx-app
-  namespace: default
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: my-nginx-app
@@ -15,20 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:alpine
+        image: jakehazex21/my-nginx-app:latest
         ports:
         - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: my-nginx-app
-  namespace: default
-spec:
-  selector:
-    app: my-nginx-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: ClusterIP
