--- a/clusters/myclusters/kustomization.yaml
+++ b/clusters/myclusters/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - nginx-deployment.yaml
+  - nginx-service.yaml
+  - nginx-ingress.yaml
 metadata:
   name: my-nginx-app
   namespace: flux-system
