--- a/apps/my-nginx-app/deployment.yaml
+++ b/apps/my-nginx-app/deployment.yaml
@@ -17,3 +17,18 @@ spec:
         image: jakehazex21/my-nginx-app:latest
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-app-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: my-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      port: 443
+      targetPort: 443
