--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: static-site
+  name: my-nginx-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: static-site
+      app: my-nginx-app
   template:
     metadata:
       labels:
-        app: static-site
+        app: my-nginx-app
     spec:
       containers:
-      - name: static-site
+      - name: my-nginx-app
         image: jakehazex21/my-nginx-app:latest  # Docker Hub image
         ports:
         - containerPort: 80
