--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,10 +35,10 @@ jobs:
         push: true
         tags: jakehazex21/my-nginx-app:latest  # Replace with your Docker Hub image tag
 
-    - name: Build and push SWAG container
+    - name: Deploy SWAG (from DockerHub)
       run: |
-        docker build -t jakehazex21/swag ./swag-config
-        docker push jakehazex21/swag
+        docker pull jakehazex21/swag:latest
+        docker run -d -p 80:80 -p 443:443 --name swag jakehazex21/swag
 
     # Step 5: Log out from Docker Hub
     - name: Log out from Docker Hub
