--- a/k8s/swag-deployment.yaml
+++ b/k8s/swag-deployment.yaml
@@ -14,14 +14,30 @@ spec:
     spec:
       containers:
       - name: swag
-        image: jakehazex21/swag:latest  # Your DockerHub SWAG image
+        image: linuxserver/swag:latest
         ports:
         - containerPort: 443
         - containerPort: 80
         volumeMounts:
-        - mountPath: /config  # For SSL certificates
+        - mountPath: /config
           name: swag-config
+        env:  # Add environment variables here
+        - name: PUID
+          value: "501"  # Use correct user ID based on your system
+        - name: PGID
+          value: "20"  # Use correct group ID based on your system
+        - name: TZ
+          value: "America/New_York"  # Adjust to your timezone
+        - name: URL
+          value: "beatsinthe.cloud"  # Your domain name
+        - name: SUBDOMAINS
+          value: "www"  # Subdomains you want SWAG to handle
+        - name: VALIDATION
+          value: "http"  # Change to dns if using DNS validation
+        - name: EMAIL
+          value: "jakepin85@gmail.com"  # Email for Let's Encrypt
       volumes:
       - name: swag-config
         persistentVolumeClaim:
           claimName: swag-config-pvc
+
