--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: static-site
+  name: my-nginx-app
 spec:
-  type: LoadBalancer
   selector:
     app: my-nginx-app
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 443
+  type: ClusterIP
+
