--- a/my-nginx-app-application.yaml
+++ b/my-nginx-app-application.yaml
@@ -4,9 +4,11 @@ metadata:
   name: my-nginx-app
   namespace: argocd
   annotations:
+    argocd-image-updater.argoproj.io/image-list: my-nginx-app=jakehazex21/my-nginx-app
+    argocd-image-updater.argoproj.io/image-kustomize: my-nginx-app=jakehazex21/my-nginx-app
     argocd-image-updater.argoproj.io/write-back-method: git
     argocd-image-updater.argoproj.io/write-back-target: 'branch:argo'
-    argocd-image-updater.argoproj.io/image-list: my-nginx-app=jakehazex21/my-nginx-app
+    argocd-image-updater.argoproj.io/my-nginx-app.update-strategy: latest
 spec:
   project: default
   source:
