--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
         push: true
         tags: |
           jakehazex21/my-nginx-app:${{ env.IMAGE_TAG }}
-          jakehazex21/my-nginx-app:latest  # Optional: Keep latest if desired
+          jakehazex21/my-nginx-app:latest
 
     - name: Deploy SWAG (from DockerHub)
       run: |
