--- a/my-nginx-app-application.yaml
+++ b/my-nginx-app-application.yaml
@@ -6,7 +6,7 @@ metadata:
     argocd-image-updater.argoproj.io/image-kustomize: my-nginx-app=jakehazex21/my-nginx-app
     argocd-image-updater.argoproj.io/write-back-method: git
     argocd-image-updater.argoproj.io/write-back-target: 'branch:argo'
-    argocd-image-updater.argoproj.io/my-nginx-app.update-strategy: name
+    argocd-image-updater.argoproj.io/my-nginx-app.update-strategy: alphabetical
 spec:
   project: default
   source:
