--- a/my-nginx-app-application.yaml
+++ b/my-nginx-app-application.yaml
@@ -3,11 +3,12 @@ kind: Application
 metadata:
   name: my-nginx-app
   annotations:
-    argocd-image-updater.argoproj.io/image-list: my-nginx-app=jakehazex21/my-nginx-app
-    argocd-image-updater.argoproj.io/image-kustomize: my-nginx-app=jakehazex21/my-nginx-app
-    argocd-image-updater.argoproj.io/write-back-method: git
-    argocd-image-updater.argoproj.io/write-back-target: 'branch:main'
-    argocd-image-updater.argoproj.io/my-nginx-app.update-strategy: alphabetical
+  argocd-image-updater.argoproj.io/image-kustomize: my-nginx-app=jakehazex21/my-nginx-app
+  argocd-image-updater.argoproj.io/write-back-method: git
+  argocd-image-updater.argoproj.io/write-back-target: branch:main
+  argocd-image-updater.argoproj.io/my-nginx-app.update-strategy: alphabetical
+  kubectl.kubernetes.io/last-applied-configuration: |
+    {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{"argocd-image-updater.argoproj.io/image-kustomize":"my-nginx-app=jakehazex21/my-nginx-app","argocd-image-updater.argoproj.io/my-nginx-app.update-strategy":"alphabetical","argocd-image-updater.argoproj.io/write-back-method":"git","argocd-image-updater.argoproj.io/write-back-target":"branch:main"},"name":"my-nginx-app","namespace":"argocd"},"spec":{"destination":{"namespace":"default","server":"https://kubernetes.default.svc"},"project":"default","source":{"kustomize":{},"path":".","repoURL":"https://github.com/catinahat85/CloudFiLive.git","targetRevision":"main"},"syncPolicy":{"automated":{"prune":true,"selfHeal":true}}}}
 spec:
   project: default
   source:
