--- a/deployment.yaml
+++ b/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: my-nginx-app
+      annotations:
+        redeploy-timestamp: "2024-09-23T20:42:00"  # Add a unique timestamp to trigger a redeploy
     spec:
       containers:
       - name: my-nginx-app
