--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,7 +39,7 @@ jobs:
         push: true
         tags: |
           jakehazex21/my-nginx-app:${{ env.IMAGE_TAG }}
-          jakehazex21/my-nginx-app:latest  # Static latest tag
+          jakehazex21/my-nginx-app:latest
 
     # Step 6: Deploy SWAG (from DockerHub)
     - name: Deploy SWAG (from DockerHub)
