--- a/ghost/deployments/ghost-pvc.yaml
+++ b/ghost/deployments/ghost-pvc.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ghost-content-pvc
+  namespace: ghost
 spec:
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
