--- a/ghost/deployments/ghost-service.yaml
+++ b/ghost/deployments/ghost-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ghost-app-service
+  namespace: ghost
 spec:
   selector:
     app: ghost-app
@@ -9,4 +10,4 @@ spec:
   - port: 80
     targetPort: 2368
     protocol: TCP
-  type: LoadBalancer
+  type: ClusterIP
