--- a/ghost/deployments/ghost-ingress.yaml
+++ b/ghost/deployments/ghost-ingress.yaml
@@ -4,16 +4,19 @@ metadata:
   name: ghost-ingress
   namespace: ghost
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: traefik # Use your ingress class (e.g., traefik or nginx)
 spec:
   rules:
-  - host: "5.78.119.50"  # Use your server's external IP
-    http:
+  - http:
       paths:
-      - path: /ghost
+      - path: /
         pathType: Prefix
         backend:
           service:
-            name: ghost-app-service  # Name of the Ghost service
+            name: ghost-service
             port:
               number: 80
+  tls:
+  - hosts:
+    - <your-domain-here>  # This can stay for when you add a domain later. 
+    secretName: tls-secret # Optional: use a TLS secret for HTTPS if required
