--- a/ghost deployment.yaml
+++ b/ghost deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ghost-app
-  namespace: <your-namespace>
+  namespace: default
 spec:
   replicas: 1
   selector:
