--- a/ingress.yaml
+++ b/ingress.yaml
@@ -17,6 +17,13 @@ spec:
             name: my-nginx-app
             port:
               number: 80
+      - path: /blog
+        pathType: Prefix
+        backend:
+          service:
+            name: ghost-app-service  # Name of your Ghost service
+            port:
+              number: 80  # Ghost runs on port 2368 by default
   - host: www.beatsinthe.cloud
     http:
       paths:
@@ -25,6 +32,13 @@ spec:
         backend:
           service:
             name: my-nginx-app
+            port:
+              number: 80
+      - path: /blog
+        pathType: Prefix
+        backend:
+          service:
+            name: ghost-app-service  # Same Ghost service
             port:
               number: 80
   tls:
