--- a/ghost service.yaml
+++ b/ghost service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ghost-app-service
-  namespace: default
+  namespace: ghost
 spec:
   selector:
     app: ghost-app
