--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ghost-db
-  namespace: default
+  namespace: ghost
 spec:
   replicas: 1
   selector:
