--- a/ghost deployment.yaml
+++ b/ghost deployment.yaml
@@ -32,4 +32,4 @@ spec:
         - name: database__connection__database
           value: ghost  
       imagePullSecrets:
-      - name: my-dockerhub-secret
+      - name: my-dockerhub-secret-ghost
