--- a/ghost-db-service.yaml
+++ b/ghost-db-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ghost-db-service
-  namespace: ghost  # Add this line
+  namespace: default  # Add this line
 spec:
   selector:
     app: ghost-db
